2007-06-07	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bug where nearby animations could temporarily stop if an "abort"
	  took place during a conversation.
	* More intrinsics uncovered with rip/wud/wuc:
	  BG: intrinsic 0x92 is *set_camera*, not center_view.
	      intrinsic 0x94 centers the screen around a (x, y) coordinate;
	          it has been renamed view_tile.
	  SI: intrinsic 0x19 is *get_item_weight*, not get_item_usability.
	      intrinsic 0x67 is definitelly remove_all_spells.
	      intrinsic 0x6b is stop_time.
	      intrinsic 0x70 is armageddon (yes, it is there).
	      intrinsic 0x72 is lightning.
	      intrinsic 0xb0 is view_tile.
	  Old center_view intrinsic is still available for both BG and SI.
	  Also, set_camera intrinsic also centers on objects, not just actors
	  SI intrinsics remove_all_spells, get_item_weight and get_skin_colour
	  were made available for BG too.
	* Updated/fixed a couple errors in intrinsic documentation.

2007-06-06    <jeff@mini.nerble.net>

	* schedule.cc (Loiter_schedule): Rewrote miner-schedule to be more
	like the original.

2007-06-07	Marzo Sette Torres Junior <marzojr@yahoo.com>
	Fixed bug when importing shp files into a VGA file over an existing shape.

2007-06-05	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed coastline desynch bug.
	* Fixed bug #1731542 by forcing the current frame to be passed for the
	  get_3d_xtiles get_3d_ytiles (thus, ensuring proper bounding boxes).
	* Fixed bug #1731543.
	* Fixed bug in ES method of saving differential VGA patches and improved
	  recognition of files from patch dir.

2007-06-03	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* objs/virtstone.h: Changed 'default' value for virtue stone map to be map 0.
	* objs/egg.cc: Fixed bug where sfx eggs would translate the SFX number to
	  the BG SFX, causing problems in SI.
	  De-hard-coded field data. Poison and sleep fields no longer activate if
	  the target is already poisoned/sleeping.